@@ -75,19 +75,29 @@ other-sources/buzz-sources/__BUZZ1PLAYER__NOT_FOR_PUBLIC!/CMachine.cpp
 * bm->callbacks->mdkHelper->numChannels
 
 = known not working machines =
+== hoshi ==
 2008.02.22 : Of 532 machine(s) 448 machine(s) worked and 84 machine(s) failed.
 2008.02.23 : Of 533 machine(s) 457 machine(s) worked and 76 machine(s) failed.
+== sterni ==
+2008.10.14 : Of 853 machine(s) 759 machine(s) worked and 94 machine(s) failed.
 
 == Generators ==
 Geonik's PrimiFun.dll
+  if we don't have MFC42.dll
+    Called unk_MFC42.DLL:1176
+    Called unk_MFC42.DLL:1243
   if we have MFC42.DLL -> Called unk_GetConsoleMode
 m4wii.dll
-  Called unk__CxxThrowException
-  http://www.winehq.org/pipermail/wine-patches/2002-October/003917.html
-  http://source.winehq.org/source/dlls/msvcrt/cppexcept.c
-  http://source.winehq.org/source/dlls/msvcrt/cppexcept.h
-  If we wrap this localy, the unk__ is gone (empty impl), but it segfaults.
-  Maybe we need a full impl.
+  if we don't have MFC42.dll
+    Called unk_MFC42.DLL:1176
+    Called unk_MFC42.DLL:1243
+  if we have MFC42.DLL
+    Called unk__CxxThrowException
+    http://www.winehq.org/pipermail/wine-patches/2002-October/003917.html
+    http://source.winehq.org/source/dlls/msvcrt/cppexcept.c
+    http://source.winehq.org/source/dlls/msvcrt/cppexcept.h
+    If we wrap this localy, the unk__ is gone (empty impl), but it segfaults.
+    Maybe we need a full impl.
 Jeskola Bass 2.dll
   buzzmachinecallbackspre12.cpp:105:BuzzMachineCallbacksPre12::MidiOut (dev=1,data=136987296)
 Jeskola Tracker.dll
@@ -102,15 +112,17 @@ Aeguelles TB4004
 
 == Effects ==
 Arguelles TruePan
-Jeskola Raverb
+Jeskola XDelay (causes distortions)
+Jeskola Raverb (causes distortions)
   BuzzMachineCallbacks::GetEnvSize (wave=-96185375,env=0)
   buzzmachinecallbackspre12.cpp:112:BuzzMachineCallbacksPre12::GetOscillatorTable (waveform=-128840458)
 Sonic Verb (seems to work now)
   buzzmachinecallbacks.cpp:199:BuzzMachineCallbacks::GetEnvPoint (wave=-1,env=-1,i=-1076278224,&x,&y,&flags)
   buzzmachinecallbacks.cpp:276:BuzzMachineCallbacks::SetSequenceData (row=-1217504548,ppat=B7A5B3C4)
-FSM Infector
-cheapo spread.dll
+cheapo spread
   hangs after GetInfo()
+  or "Called unk_malloc"
+  after copying msvcr70.dll to libdir "unk_SetCriticalSectionSpinCount" (this is now implemented)
 Ynzn's Remote Compressor.dll
 Ynzn's Remote Gate.dll
   both crash (problem with name?)
